Helm-project/Custom-value-complete/run/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lhc-install-ingress
  namespace: lhc-install-dev
  labels:
    name: lhc-install-ingress
    namespace: lhc-install-dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pshung.tk
      secretName: lhc-install-secret-tls
  rules:
  - host: pshung.tk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lhc-install-dev
            port: 
              number: 8080
