Helm-project/Custom-value-complete/run/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-install-ingress
  namespace: nginx-app-install-dev
  labels:
    name: nginx-app-install-ingress
    namespace: nginx-app-install-dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pshung.tk
      secretName: nginx-app-install-secret-tls
  rules:
  - host: pshung.tk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-app-install-dev
            port: 
              number: 8080
